Fixed navigation alignment and increased logo size

--- a/style.css
+++ b/style.css
@@ -4714,3 +4714,15 @@ p {
   width: 100%;
   padding: 10px 15px;
 }
+
+.image-3 {
+  max-width: 150px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: flex-end;
+  width: auto;
+}
